--- a/index.html
+++ b/index.html
@@ -517,7 +517,7 @@
   <div class="row justify-content-center">
     <div class="col-md-4">
       <div class="profile-card">
-        <img src="images/teacher1.png" alt="Teacher 1" class="profile-img">
+        <img src="./images/teacher1.png" alt="Teacher 1" class="profile-img">
         <h3>Prof. Anal kumar Mitra</h3>
 		<p>Assistant professior of Techono india Institute of Technology</p>
         <p>Guided me in all Carrerier aspects and always help from everyside.</p>
@@ -528,7 +528,7 @@
     </div>
     <div class="col-md-4">
       <div class="profile-card">
-        <img src="images/teacher2.png" alt="Teacher 2" class="profile-img">
+        <img src="./images/teacher2.png" alt="Teacher 2" class="profile-img">
         <h3>Prof. Raghunath Manna</h3>
 		<p>HOD of The Techono india Institute of Technology </p>
         <p>Guided me in programming Language like c ,python and always help me in academic any problem </p>
@@ -546,7 +546,7 @@
   <div class="row justify-content-center">
     <div class="col-md-4">
       <div class="profile-card">
-        <img src="images/family1.png" alt="Family 1" class="profile-img">
+        <img src="./images/family1.png" alt="Family 1" class="profile-img">
         <h3>My Father</h3>
         <p>My biggest inspiration</p>
         <div class="social-icons">
@@ -556,7 +556,7 @@
     </div>
     <div class="col-md-4">
       <div class="profile-card">
-        <img src="images/family2.png" alt="Family 2" class="profile-img">
+        <img src="./images/family2.png" alt="Family 2" class="profile-img">
         <h3>My Mother</h3>
         <p>My source of strength</p>
         <div class="social-icons">
@@ -566,7 +566,7 @@
     </div>
 	 <div class="col-md-4">
       <div class="profile-card">
-        <img src="images/sister.png" alt="Family 2" class="profile-img">
+        <img src="./images/sister.png" alt="Family 2" class="profile-img">
         <h3>My Sister</h3>
         <p>My Fighting partner </p>
         <div class="social-icons">
@@ -576,7 +576,7 @@
     </div>
 	 <div class="col-md-4">
       <div class="profile-card">
-        <img src="images/brother1.png" alt="Family 2" class="profile-img">
+        <img src="./images/brother1.png" alt="Family 2" class="profile-img">
         <h3>My Brother</h3>
         <p>My Crime Partner</p>
         <div class="social-icons">
@@ -586,7 +586,7 @@
     </div>
 	 <div class="col-md-4">
       <div class="profile-card">
-        <img src="images/brother2.png" alt="Family 2" class="profile-img">
+        <img src="./images/brother2.png" alt="Family 2" class="profile-img">
         <h3>My Sister Husband(Brother)</h3>
         <p>My source of support</p>
         <div class="social-icons">
@@ -603,7 +603,7 @@
     
     <div class="col-md-4">
       <div class="profile-card">
-        <img src="images/freind1.png" alt="Friend 1" class="profile-img">
+        <img src="./images/freind1.png" alt="Friend 1" class="profile-img">
         <h3>Someone Special (Chota Don 💪🏻💗)</h3>
         <p>Brings joy in my life ❤️</p>
         <div class="social-icons">
@@ -615,7 +615,7 @@
 
     <div class="col-md-4">
       <div class="profile-card">
-        <img src="images/kakima.png" alt="Friend 2" class="profile-img">
+        <img src="./images/kakima.png" alt="Friend 2" class="profile-img">
         <h3>Kakima</h3>
         <p>One of my Mother</p>
         <div class="social-icons">
@@ -627,7 +627,7 @@
 
     <div class="col-md-4">
       <div class="profile-card">
-        <img src="images/freind2.png" alt="Friend 3" class="profile-img">
+        <img src="./images/freind2.png" alt="Friend 3" class="profile-img">
         <h3>Subhrajyoti Sreemany</h3>
         <p>Friend 🫂</p>
         <div class="social-icons">
@@ -639,7 +639,7 @@
 
     <div class="col-md-4">
       <div class="profile-card">
-        <img src="images/Behena.png" alt="Friend 4" class="profile-img">
+        <img src="./images/Behena.png" alt="Friend 4" class="profile-img">
         <h3>Prity</h3>
         <p>Behena ❤️</p>
         <div class="social-icons">
@@ -651,7 +651,7 @@
 
     <div class="col-md-4">
       <div class="profile-card">
-        <img src="images/Sister2.png" alt="Friend 5" class="profile-img">
+        <img src="./images/Sister2.png" alt="Friend 5" class="profile-img">
         <h3>Ritwika</h3>
         <p>Sister 💟</p>
         <div class="social-icons">
@@ -663,7 +663,7 @@
 
     <div class="col-md-4">
       <div class="profile-card">
-        <img src="images/pijush.png" alt="Friend 6" class="profile-img">
+        <img src="./images/pijush.png" alt="Friend 6" class="profile-img">
         <h3>Piyus</h3>
         <p>Freind🫂</p>
         <div class="social-icons">
@@ -675,7 +675,7 @@
 
     <div class="col-md-4">
       <div class="profile-card">
-        <img src="images/Sister2.png" alt="Friend 7" class="profile-img">
+        <img src="./images/Sister2.png" alt="Friend 7" class="profile-img">
         <h3>Ritwika</h3>
         <p>Sister 🫂</p>
         <div class="social-icons">
