--- a/index.html
+++ b/index.html
@@ -679,7 +679,7 @@
 
     <div class="col-md-4">
       <div class="profile-card">
-        <img src="/images/Ritam.png" alt="Friend 7" class="profile-img">
+        <img src="images/Ritam.png" alt="Friend 7" class="profile-img">
         <h3>Ritam</h3>
         <p>Freind 🫂</p>
         <div class="social-icons">
@@ -691,7 +691,7 @@
 
     <div class="col-md-4">
       <div class="profile-card">
-        <img src="/images/deba.png" alt="Friend 7" class="profile-img">
+        <img src="images/deba.png" alt="Friend 7" class="profile-img">
         <h3>Deba</h3>
         <p>Freind 🫂</p>
         <div class="social-icons">
@@ -703,7 +703,7 @@
 
     <div class="col-md-4">
       <div class="profile-card">
-        <img src="/images/arindam.png" alt="Friend 7" class="profile-img">
+        <img src="images/arindam.png" alt="Friend 7" class="profile-img">
         <h3>Arindam</h3>
         <p>Freind🫂</p>
         <div class="social-icons">
