--- a/index.html
+++ b/index.html
@@ -684,7 +684,7 @@
         <p>Freind 🫂</p>
         <div class="social-icons">
           <a href="#"><span class="icon-heart"></span></a>
-          <a href="https://www.instagram.com/ritwiiiikaaaa/"><span class="icon-instagram"></span></a>
+          <a href="https://www.instagram.com/ritam_x_xavier/"><span class="icon-instagram"></span></a>
         </div>
       </div>
     </div>
@@ -696,7 +696,7 @@
         <p>Freind 🫂</p>
         <div class="social-icons">
           <a href="#"><span class="icon-heart"></span></a>
-          <a href="https://www.instagram.com/ritwiiiikaaaa/"><span class="icon-instagram"></span></a>
+          <a href="https://www.instagram.com/debarjun.m/"><span class="icon-instagram"></span></a>
         </div>
       </div>
     </div>
@@ -708,7 +708,7 @@
         <p>Freind🫂</p>
         <div class="social-icons">
           <a href="#"><span class="icon-heart"></span></a>
-          <a href="https://www.instagram.com/ritwiiiikaaaa/"><span class="icon-instagram"></span></a>
+          <a href="https://www.instagram.com/arindam.ghorui.399/"><span class="icon-instagram"></span></a>
         </div>
       </div>
     </div>
