--- a/index.html
+++ b/index.html
@@ -514,7 +514,7 @@
   <button class="tab-btn active" data-target="teachers">Teachers</button>
   <!-- locked-tab + data-pass attributes -->
   <button class="tab-btn locked-tab" data-target="family" data-pass="1234">Family 1</button>
-  <button class="tab-btn locked-tab" data-target="friends" data-pass="5678">Family 2</button>
+  <button class="tab-btn locked-tab" data-target="friends" data-pass="Swarmi1109">Family 2</button>
 </div>
 
 
