--- a/index.html
+++ b/index.html
@@ -577,7 +577,7 @@
         <h3>My Sister</h3>
         <p>My Fighting partner </p>
         <div class="social-icons">
-          <a href="#"><span class="icon-instagram"></span></a>
+          <a href="https://www.instagram.com/somu_adak/"><span class="icon-instagram"></span></a>
         </div>
       </div>
     </div>
