--- a/index.html
+++ b/index.html
@@ -627,7 +627,7 @@
         <p>One of my Mother</p>
         <div class="social-icons">
           <a href="#"><span class="icon-heart"></span></a>
-          <a href="https://www.instagram.com/swarmi.sthaa_?utm_source=ig_web_button_share_sheet&igsh=MXZnaGdiNGpkcmV3Mg=="><span class="icon-instagram"></span></a>
+          <a href="https://www.facebook.com/champa.kar.628547"><span class="icon-facebook"></span></a>
         </div>
       </div>
     </div>
@@ -639,7 +639,7 @@
         <p>Friend 🫂</p>
         <div class="social-icons">
           <a href="#"><span class="icon-heart"></span></a>
-          <a href="https://www.instagram.com/swarmi.sthaa_?utm_source=ig_web_button_share_sheet&igsh=MXZnaGdiNGpkcmV3Mg=="><span class="icon-instagram"></span></a>
+          <a href="https://www.facebook.com/subhrajyoti.sreemany"><span class="icon-facebook"></span></a>
         </div>
       </div>
     </div>
@@ -675,7 +675,7 @@
         <p>Freind🫂</p>
         <div class="social-icons">
           <a href="#"><span class="icon-heart"></span></a>
-          <a href="https://www.instagram.com/ritwiiiikaaaa/"><span class="icon-instagram"></span></a>
+          <a href="https://www.instagram.com/mr.pijush/"><span class="icon-instagram"></span></a>
         </div>
       </div>
     </div>
@@ -687,7 +687,7 @@
         <p>Freind 🫂</p>
         <div class="social-icons">
           <a href="#"><span class="icon-heart"></span></a>
-          <a href="https://www.instagram.com/ritwiiiikaaaa/"><span class="icon-instagram"></span></a>
+          <a href="https://www.instagram.com/ritam_x_xavier/"><span class="icon-instagram"></span></a>
         </div>
       </div>
     </div>
@@ -699,7 +699,7 @@
         <p>Freind 🫂</p>
         <div class="social-icons">
           <a href="#"><span class="icon-heart"></span></a>
-          <a href="https://www.instagram.com/ritwiiiikaaaa/"><span class="icon-instagram"></span></a>
+          <a href="https://www.instagram.com/debarjun.m/"><span class="icon-instagram"></span></a>
         </div>
       </div>
     </div>
@@ -711,7 +711,7 @@
         <p>Freind🫂</p>
         <div class="social-icons">
           <a href="#"><span class="icon-heart"></span></a>
-          <a href="https://www.instagram.com/ritwiiiikaaaa/"><span class="icon-instagram"></span></a>
+          <a href="https://www.instagram.com/arindam.ghorui.399/"><span class="icon-instagram"></span></a>
         </div>
       </div>
     </div>
