--- a/index.html
+++ b/index.html
@@ -500,16 +500,203 @@
 <!-- Teachers Section -->
 <div id="teachers" class="tab-content active teachers-bg">
   <!-- Your teachers profile-cards -->
+	<div class="row justify-content-center">
+    <div class="col-md-4">
+      <div class="profile-card">
+        <img src="images/teacher1.png" alt="Teacher 1" class="profile-img">
+        <h3>Prof. Anal kumar Mitra</h3>
+		<p>Assistant professior of Techono india Institute of Technology</p>
+        <p>Guided me in all Carrerier aspects and always help from everyside.</p>
+        <div class="social-icons">
+          <a href="https://www.facebook.com/Mittra.Anal"><span class="icon-facebook"></span></a>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-4">
+      <div class="profile-card">
+        <img src="images/teacher2.png" alt="Teacher 2" class="profile-img">
+        <h3>Prof. Raghunath Manna</h3>
+		<p>HOD of The Techono india Institute of Technology </p>
+        <p>Guided me in programming Language like c ,python and always help me in academic any problem </p>
+        <div class="social-icons">
+          <a href="#"><span class="icon-twitter"></span></a>
+          <a href="https://www.facebook.com/raghunath.manna.963"><span class="icon-facebook"></span></a>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
 
 <!-- Family Section (locked initially) -->
 <div id="family" class="tab-content family-bg locked">
   <!-- Your family profile-cards -->
+	<div class="row justify-content-center">
+    <div class="col-md-4">
+      <div class="profile-card">
+        <img src="images/family1.png" alt="Family 1" class="profile-img">
+        <h3>My Father</h3>
+        <p>My biggest inspiration</p>
+        <div class="social-icons">
+          <a href="#"><span class="icon-facebook"></span></a>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-4">
+      <div class="profile-card">
+        <img src="images/family2.png" alt="Family 2" class="profile-img">
+        <h3>My Mother</h3>
+        <p>My source of strength</p>
+        <div class="social-icons">
+          <a href="#"><span class="icon-instagram"></span></a>
+        </div>
+      </div>
+    </div>
+	 <div class="col-md-4">
+      <div class="profile-card">
+        <img src="images/sister.png" alt="Family 2" class="profile-img">
+        <h3>My Sister</h3>
+        <p>My Fighting partner </p>
+        <div class="social-icons">
+          <a href="#"><span class="icon-instagram"></span></a>
+        </div>
+      </div>
+    </div>
+	 <div class="col-md-4">
+      <div class="profile-card">
+        <img src="images/brother1.png" alt="Family 2" class="profile-img">
+        <h3>My Brother</h3>
+        <p>My Crime Partner</p>
+        <div class="social-icons">
+          <a href="https://www.instagram.com/surajmaity_14/"><span class="icon-instagram"></span></a>
+        </div>
+      </div>
+    </div>
+	 <div class="col-md-4">
+      <div class="profile-card">
+        <img src="images/brother2.png" alt="Family 2" class="profile-img">
+        <h3>My Sister Husband(Brother)</h3>
+        <p>My source of support</p>
+        <div class="social-icons">
+          <a href="https://www.instagram.com/prosen.das.3194524/"><span class="icon-instagram"></span></a>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
 
 <!-- Friends Section (locked initially) -->
 <div id="friends" class="tab-content friends-bg locked">
   <!-- Your friends profile-cards -->
+	  <div class="row justify-content-center">
+    
+    <div class="col-md-4">
+      <div class="profile-card">
+        <img src="images/freind1.png" alt="Friend 1" class="profile-img">
+        <h3>Someone Special (Chota Don 💪🏻💗)</h3>
+        <p>Brings joy in my life ❤️</p>
+        <div class="social-icons">
+          <a href="#"><span class="icon-heart"></span></a>
+          <a href="https://www.instagram.com/swarmi.sthaa_/"><span class="icon-instagram"></span></a>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-md-4">
+      <div class="profile-card">
+        <img src="images/kakima.png" alt="Friend 2" class="profile-img">
+        <h3>Kakima</h3>
+        <p>One of my Mother</p>
+        <div class="social-icons">
+          <a href="#"><span class="icon-heart"></span></a>
+          <a href="https://www.instagram.com/swarmi.sthaa_?utm_source=ig_web_button_share_sheet&igsh=MXZnaGdiNGpkcmV3Mg=="><span class="icon-instagram"></span></a>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-md-4">
+      <div class="profile-card">
+        <img src="images/freind2.png" alt="Friend 3" class="profile-img">
+        <h3>Subhrajyoti Sreemany</h3>
+        <p>Friend 🫂</p>
+        <div class="social-icons">
+          <a href="#"><span class="icon-heart"></span></a>
+          <a href="https://www.instagram.com/swarmi.sthaa_?utm_source=ig_web_button_share_sheet&igsh=MXZnaGdiNGpkcmV3Mg=="><span class="icon-instagram"></span></a>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-md-4">
+      <div class="profile-card">
+        <img src="images/Behena.png" alt="Friend 4" class="profile-img">
+        <h3>Prity</h3>
+        <p>Behena ❤️</p>
+        <div class="social-icons">
+          <a href="#"><span class="icon-heart"></span></a>
+          <a href="https://www.instagram.com/talk_de_ty/"><span class="icon-instagram"></span></a>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-md-4">
+      <div class="profile-card">
+        <img src="images/Sister2.png" alt="Friend 5" class="profile-img">
+        <h3>Ritwika</h3>
+        <p>Sister 💟</p>
+        <div class="social-icons">
+          <a href="#"><span class="icon-heart"></span></a>
+          <a href="https://www.instagram.com/ritwiiiikaaaa/"><span class="icon-instagram"></span></a>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-md-4">
+      <div class="profile-card">
+        <img src="images/pijush.png" alt="Friend 6" class="profile-img">
+        <h3>Piyus</h3>
+        <p>Freind🫂</p>
+        <div class="social-icons">
+          <a href="#"><span class="icon-heart"></span></a>
+          <a href="https://www.instagram.com/ritwiiiikaaaa/"><span class="icon-instagram"></span></a>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-md-4">
+      <div class="profile-card">
+        <img src="images/Ritam.png" alt="Friend 7" class="profile-img">
+        <h3>Ritam</h3>
+        <p>Freind 🫂</p>
+        <div class="social-icons">
+          <a href="#"><span class="icon-heart"></span></a>
+          <a href="https://www.instagram.com/ritwiiiikaaaa/"><span class="icon-instagram"></span></a>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-md-4">
+      <div class="profile-card">
+        <img src="images/deba.png" alt="Friend 7" class="profile-img">
+        <h3>Deba</h3>
+        <p>Freind 🫂</p>
+        <div class="social-icons">
+          <a href="#"><span class="icon-heart"></span></a>
+          <a href="https://www.instagram.com/ritwiiiikaaaa/"><span class="icon-instagram"></span></a>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-md-4">
+      <div class="profile-card">
+        <img src="images/arindam.png" alt="Friend 7" class="profile-img">
+        <h3>Arindam</h3>
+        <p>Freind🫂</p>
+        <div class="social-icons">
+          <a href="#"><span class="icon-heart"></span></a>
+          <a href="https://www.instagram.com/ritwiiiikaaaa/"><span class="icon-instagram"></span></a>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
 
 <script>
